--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,30 @@
-build/
-*.ipr
-run/
-runs/
-*.iws
-out/
-*.iml
-.gradle/
-output/
-bin/
-libs/
-
+# eclipse
+bin
+*.launch
+.settings
+.metadata
 .classpath
 .project
-.idea/
-classes/
-.metadata
-.vscode
-.settings
-*.launch
-/fabric/src/generated
-/forge/src/generated
-/neoforge/src/generated
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea/*
+!.idea/scopes
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+*/runs/server/*
+*/runs/client/*
+!*/runs/client/options.txt
+
+
+/fabric/src/generated/
+/neoforge/src/generated/
+/forge/src/generated/
