--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@ org.gradle.jvmargs=-Xmx4096M
 # Project
 version=1.10.3
 group=net.xstopho.resource_cracker
+modrinth_id=hwfBSwLz
+curseforge_id=917988
 
 # Common
 minecraft_version=1.20.4
