--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,24 @@
 org.gradle.jvmargs=-Xmx4096M
 
 # Project
-version=1.10.3
+version=1.11.0
 group=net.xstopho.resource_cracker
 modrinth_id=hwfBSwLz
 curseforge_id=917988
 
 # Common
-minecraft_version=1.20.4
+minecraft_version=1.20.5
 mod_name=Resource Cracker
 mod_author=xStopho
 mod_id=resource_cracker
 mod_license=MIT
 mod_credits=
 mod_description=Gather Resources with ease
-minecraft_version_range=[1.20.3, 1.21)
+minecraft_version_range=[1.20.5, 1.21)
 
 # Fabric
-fabric_loader_version=0.15.6
-fabric_api_version=0.96.11+1.20.4
+fabric_loader_version=0.15.10
+fabric_api_version=0.97.6+1.20.5
 
 # Forge
 forge_version=49.0.38
@@ -26,12 +26,12 @@ forge_loader_version_range=[49,)
 forge_version_range=[49,)
 
 # NeoForge
-neoforge_version=20.4.210
+neoforge_version=20.5.0-beta
 neoforge_loader_version_range=[1,)
 
 # Dependencies
-simple_config_api=0.3.2
-stophos_lib=0.1.0
+resourceconfigapi=1.20.5+1.0.0
+resourcelibrary=1.20.5-1.0.0
 
 # Runtime mods
 rei=14.0.688
