--- a/settings.gradle
+++ b/settings.gradle
@@ -16,5 +16,5 @@ plugins {
 rootProject.name = "Resource-Cracker"
 include("common")
 include("fabric")
-include("forge")
+//include("forge")
 include("neoforge")
