--- a/gradle.properties
+++ b/gradle.properties
@@ -30,8 +30,8 @@ neoforge_version=20.5.0-beta
 neoforge_loader_version_range=[1,)
 
 # Dependencies
-resourceconfigapi=1.20.5+1.0.0
-resourcelibrary=1.20.5-1.0.0
+resourceconfigapi=1.20.5-1.0.1
+resourcelibrary=1.20.5-1.1.0
 
 # Runtime mods
 rei=14.0.688
