--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -38,7 +38,7 @@ loom {
             runDir("runs/client")
         }
         datagen {
-            inherit server
+            inherit client
             name "Fabric Datagen"
             vmArg "-Dfabric-api.datagen"
             vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated")}"
