--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -57,6 +57,14 @@ minecraft {
     }
 }
 
+tasks.withType(JavaCompile).configureEach {
+    exclude("net/xstopho/mixin")
+}
+
+processResources {
+    exclude("resource_cracker.mixins.json")
+}
+
 sourceSets.each {
     def dir = layout.buildDirectory.dir("sourcesSets/$it.name")
     it.output.resourcesDir = dir
