project: bump versions

--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -8,6 +8,10 @@ java {
     withJavadocJar()
 }
 
+base {
+    archivesName = "$mod_id-$project.name-1.20.3-1.20.4"
+}
+
 repositories {
     mavenCentral()
     maven { url 'https://raw.githubusercontent.com/Stein-N/resources/main/maven' }
