--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ modrinth_id=
 curseforge_id=
 
 # Common
-minecraft_version=1.20.6
+minecraft_version=1.20.4
 mod_name=Resource Cracker
 mod_author=xStopho
 mod_id=resource_cracker
@@ -19,20 +19,20 @@ minecraft_version_range=[1.20.6, 1.21)
 
 # Fabric
 fabric_loader_version=0.15.11
-fabric_api_version=0.97.8
+fabric_api_version=0.97.0
 
 # NeoForge
-neoforge_version=20.6.26-beta
+neoforge_version=20.4.234
 neoforge_loader_version_range=[1,)
 
 # Forge
-forge_version=50.0.5
-forge_version_range=[50, 51)
+forge_version=49.0.49
+forge_version_range=[49, 50)
 
 # Dependencies
 resource_config_api=1.20-1.1.0
-resource_library=1.20.6-1.3.1
+resource_library=1.20.4-1.3.1
 
 # Runtime Mods
-emi=1.1.6+1.20.6
+emi=1.1.6+1.20.4
 mod_menu=10.0.0-beta.1
