--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -4,10 +4,6 @@ plugins {
     id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
 }
 
-base {
-    archivesName = "${mod_id}-forge-1.20.6"
-}
-
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     annotationProcessor("org.spongepowered:mixin:0.8.5-SNAPSHOT:processor")
@@ -15,6 +11,10 @@ dependencies {
 
     implementation "net.xstopho.resourceconfigapi:resourceconfigapi-forge:${resource_config_api}"
     implementation "net.xstopho.resourcelibrary:resourcelibrary-forge:${resource_library}"
+
+    runtimeOnly "maven.modrinth:rei:14.1.727+forge"
+    runtimeOnly "maven.modrinth:cloth-config:13.0.121+forge"
+    runtimeOnly "maven.modrinth:architectury-api:11.1.17+minecraftforge"
 }
 
 minecraft {
