--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -76,9 +76,9 @@ publishMods {
     modLoaders.add("forge")
 
     modrinth {
-        minecraftVersions.add('1.20.6')
+        minecraftVersions.addAll('1.20.3', '1.20.4')
     }
     curseforge {
-        minecraftVersions.add('1.20.6')
+        minecraftVersions.addAll('1.20.3', '1.20.4')
     }
 }
