project: backport to 1.20.3 and 1.20.4

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 
     modRuntimeOnly "maven.modrinth:modmenu:${mod_menu}"
     modRuntimeOnly "maven.modrinth:emi:${emi}+fabric"
+    modRuntimeOnly "maven.modrinth:jade:${jade}-fabric"
 
 }
 
