--- a/gradle.properties
+++ b/gradle.properties
@@ -15,14 +15,14 @@ mod_id=resource_cracker
 mod_license=MIT
 mod_credits=
 mod_description=Gather Resources with ease
-minecraft_version_range=[1.20.6, 1.21)
+minecraft_version_range=[1.20.3, 1.20.5)
 
 # Fabric
 fabric_loader_version=0.15.11
 fabric_api_version=0.97.0
 
 # NeoForge
-neoforge_version=20.4.234
+neoforge_version=20.4.232
 neoforge_loader_version_range=[1,)
 
 # Forge
@@ -35,4 +35,5 @@ resource_library=1.20.4-1.3.1
 
 # Runtime Mods
 emi=1.1.6+1.20.4
-mod_menu=10.0.0-beta.1
+jade=13.3.1
+mod_menu=9.2.0-beta.2
