--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'ml-loader'
-    id 'net.neoforged.gradle.userdev' version '7.0.119'
+    id 'net.neoforged.gradle.userdev' version '7.0.120'
 }
 
 base {
@@ -17,6 +17,7 @@ dependencies {
     implementation "net.xstopho.resourcelibrary:resourcelibrary-neoforge:${resource_library}"
 
     runtimeOnly "maven.modrinth:emi:${emi}+neoforge"
+    runtimeOnly "maven.modrinth:jade:${jade}-neoforge"
 }
 
 runs {
