--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.daemon=false
 # Project
 version=1.12.0
 group=net.xstopho.resource_cracker
-modrinth_id=
-curseforge_id=
+modrinth_id=hwfBSwLz
+curseforge_id=917988
 
 # Common
 minecraft_version=1.20.4
@@ -18,8 +18,8 @@ mod_description=Gather Resources with ease
 minecraft_version_range=[1.20.3, 1.20.5)
 
 # Fabric
-fabric_loader_version=0.15.11
 fabric_api_version=0.97.0
+fabric_loader_version=0.15.11
 
 # NeoForge
 neoforge_version=20.4.232
