--- a/gradle.properties
+++ b/gradle.properties
@@ -8,17 +8,17 @@ modrinth_id=hwfBSwLz
 curseforge_id=917988
 
 # Common
-minecraft_version=1.20.4
+minecraft_version=1.20.1
 mod_name=Resource Cracker
 mod_author=xStopho
 mod_id=resource_cracker
 mod_license=MIT
 mod_credits=
 mod_description=Gather Resources with ease
-minecraft_version_range=[1.20.3, 1.20.5)
+minecraft_version_range=[1.20.1, 1.20.3)
 
 # Fabric
-fabric_api_version=0.97.0
+fabric_api_version=0.92.1
 fabric_loader_version=0.15.11
 
 # NeoForge
@@ -26,14 +26,14 @@ neoforge_version=20.4.232
 neoforge_loader_version_range=[1,)
 
 # Forge
-forge_version=49.0.49
-forge_version_range=[49, 50)
+forge_version=47.2.32
+forge_version_range=[47, 49)
 
 # Dependencies
 resource_config_api=1.20-1.1.0
-resource_library=1.20.4-1.3.1
+resource_library=1.20.1-1.3.1
 
 # Runtime Mods
-emi=1.1.6+1.20.4
-jade=13.3.1
-mod_menu=9.2.0-beta.2
+emi=1.1.6+1.20.1
+jade=11.7.0
+mod_menu=7.2.2
