--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -16,7 +16,9 @@ repositories {
     mavenCentral()
     maven { url 'https://raw.githubusercontent.com/Stein-N/resources/main/maven' }
     maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
+    maven { url 'https://maven.terraformersmc.com/' }
     maven { url 'https://api.modrinth.com/maven' }
+    maven { url 'https://cursemaven.com'}
 }
 
 dependencies {
