project: adding runtimeMods

--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation "net.xstopho.resourcelibrary:resourcelibrary-neoforge:${resource_library}"
 
     runtimeOnly "maven.modrinth:emi:${emi}+neoforge"
+    runtimeOnly "maven.modrinth:ae2:${ae2}"
 }
 
 runs {
