--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.daemon=false
 # Project
 version=1.12.0
 group=net.xstopho.resource_cracker
-modrinth_id=
-curseforge_id=
+modrinth_id=hwfBSwLz
+curseforge_id=917988
 
 # Common
 minecraft_version=1.20.6
@@ -22,7 +22,7 @@ fabric_loader_version=0.15.11
 fabric_api_version=0.97.8
 
 # NeoForge
-neoforge_version=20.6.26-beta
+neoforge_version=20.6.42-beta
 neoforge_loader_version_range=[1,)
 
 # Forge
@@ -36,3 +36,5 @@ resource_library=1.20.6-1.3.1
 # Runtime Mods
 emi=1.1.6+1.20.6
 mod_menu=10.0.0-beta.1
+
+ae2=18.1.1-alpha
