--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -57,7 +57,7 @@ loom {
 // Loader Specific Settings
 publishMods {
     file = remapJar.archiveFile
-    modLoaders.addAll("fabric", "quilt")
+    modLoaders.add("fabric")
 
     modrinth {
         minecraftVersions.addAll('1.20', '1.20.1', '1.20.2')
