--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'net.neoforged.gradle.userdev' version '7.0.119'
 }
 
+base {
+    archivesName = "${mod_id}-neoforge-1.20.6"
+}
+
 var at = file('src/main/resources/META-INF/accesstransformer.cfg')
 if (at.exists()) minecraft.accessTransformers.file at
 
