--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -23,7 +23,7 @@ license = "${mod_license}"
 [[dependencies.${mod_id}]]
     modId = "minecraft"
     required = true
-    versionRange = "[1.20.5,)"
+    versionRange = "${minecraft_version_range}"
     ordering = "NONE"
     side = "BOTH"
 
