project: bump versions

--- a/buildSrc/src/main/groovy/ml-loader-publish.gradle
+++ b/buildSrc/src/main/groovy/ml-loader-publish.gradle
@@ -11,14 +11,14 @@ publishMods {
     else changelog = 'NO VALID CHANGELOG FILE FOUND!'
 
     modrinth {
-        accessToken = MODRINTH_KEY
+        accessToken = MODRINTH_API_KEY
         projectId = modrinth_id
 
         requires('resource-library')
         requires('resource-config-api')
     }
     curseforge {
-        accessToken = CURSEFORGE_KEY
+        accessToken = CURSEFORGE_API_KEY
         projectId = curseforge_id
 
         clientRequired = true
