--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -17,8 +17,8 @@ dependencies {
     modImplementation "net.xstopho.resourceconfigapi:resourceconfigapi-fabric:${resource_config_api}"
     modImplementation "net.xstopho.resourcelibrary:resourcelibrary-fabric:${resource_library}"
 
-    modRuntimeOnly "maven.modrinth:modmenu:${mod_menu}"
-    modRuntimeOnly "maven.modrinth:emi:${emi}+fabric"
+    //modRuntimeOnly "maven.modrinth:modmenu:${mod_menu}"
+    //modRuntimeOnly "maven.modrinth:emi:${emi}+fabric"
 
 }
 
