--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'ml-loader'
-    id 'net.neoforged.gradle.userdev' version '7.0.119'
+    id 'net.neoforged.gradle.userdev' version '7.0.142'
 }
 
 base {
@@ -16,8 +16,8 @@ dependencies {
     implementation "net.xstopho.resourceconfigapi:resourceconfigapi-neoforge:${resource_config_api}"
     implementation "net.xstopho.resourcelibrary:resourcelibrary-neoforge:${resource_library}"
 
-    runtimeOnly "maven.modrinth:emi:${emi}+neoforge"
-    runtimeOnly "maven.modrinth:ae2:${ae2}-neoforge"
+    //runtimeOnly "maven.modrinth:emi:${emi}+neoforge"
+    //runtimeOnly "maven.modrinth:ae2:${ae2}-neoforge"
 }
 
 runs {
