--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 base {
-    archivesName = "${mod_id}-fabric-1.20.5-1.20.6"
+    archivesName = "${mod_id}-fabric-${minecraft_version}"
 }
 
 dependencies {
@@ -55,11 +55,11 @@ publishMods {
     modLoaders.add("fabric")
 
     modrinth {
-        minecraftVersions.addAll('1.20.5', '1.20.6')
+        minecraftVersions.addAll('1.21')
         requires('fabric-api')
     }
     curseforge {
-        minecraftVersions.addAll('1.20.5', '1.20.6')
+        minecraftVersions.addAll('1.21')
         requires('fabric-api')
     }
 }
