--- a/settings.gradle
+++ b/settings.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 // Change the rootProject Name to your repository/project folder name
-rootProject.name = "Resource-Cracker-1.20.5-1.20.6"
+rootProject.name = "Resource-Cracker-1.21"
 include("common")
 include("fabric")
 include("forge")
