--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,7 @@ fabric_api_version=0.100.1
 # NeoForge
 neoforge_version=21.0.8-beta
 neoforge_loader_version_range=[2,)
+neogradle.subsystems.conventions.runs.create-default-run-per-type=false
 
 # Forge
 forge_version=51.0.8
@@ -34,7 +35,7 @@ resource_config_api=1.21-2.0.0
 resource_library=1.21-2.0.0
 
 # Runtime Mods
-emi=1.1.6+1.20.6
-mod_menu=11.0.0-rc.2
+emi_version=1.1.7+1.21
+mod_menu_version=11.0.0-rc.4
 
-ae2=18.1.1-alpha
+ae2_version=19.0.2-alpha
