--- a/buildSrc/src/main/groovy/ml-loader-publish.gradle
+++ b/buildSrc/src/main/groovy/ml-loader-publish.gradle
@@ -14,6 +14,8 @@ publishMods {
         accessToken = MODRINTH_API_KEY
         projectId = modrinth_id
 
+        minecraftVersions.add(minecraft_version)
+
         requires('resource-library')
         requires('resource-config-api')
     }
@@ -23,6 +25,8 @@ publishMods {
 
         clientRequired = true
         serverRequired = true
+
+        minecraftVersions.add(minecraft_version)
 
         requires('resource-library')
         requires('resource-config-api')
