fabric/neoforge: adding JAde as runtime Mod

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     modRuntimeOnly "maven.modrinth:modmenu:${mod_menu_version}"
     modRuntimeOnly "maven.modrinth:emi:${emi_version}+fabric"
+    modRuntimeOnly "maven.modrinth:jade:${jade_version}+fabric"
 
 }
 
