--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=2.0.0
+version=2.0.1
 group=net.xstopho.resource_cracker
 modrinth_id=hwfBSwLz
 curseforge_id=917988
@@ -37,5 +37,6 @@ resource_library=1.21-2.0.0
 # Runtime Mods
 emi_version=1.1.7+1.21
 mod_menu_version=11.0.0-rc.4
-
+jade_version=15.0.4
 ae2_version=19.0.2-alpha
+mekanism_version=10.6.0.44
