--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ eclipse
 */runs/client/*
 */runs/data/*
 !*/runs/client/options.txt
+!*/runs/client/config
+*/runs/client/config/*
 !*/runs/client/config/emi.css
 
 
