--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -15,6 +15,7 @@ repositories {
     maven { url 'https://maven.terraformersmc.com/' }
     maven { url 'https://api.modrinth.com/maven' }
     maven { url 'https://cursemaven.com'}
+    maven { url MAVEN_REPOSITORY_TEST }
 }
 
 dependencies {
