--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,6 @@
 plugins {
-    // Required for NeoGradle
-    id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
-    id "me.modmuss50.mod-publish-plugin" version "0.5.1"
-}
-
-subprojects {
-    apply plugin: "me.modmuss50.mod-publish-plugin"
+    id 'fabric-loom' version '1.7-SNAPSHOT' apply false
+    id 'net.neoforged.moddev' version '1.0.1' apply false
+    id 'net.minecraftforge.gradle' version '[6.0.25, 6.2)' apply false
+    id "me.modmuss50.mod-publish-plugin" version "0.5.1" apply false
 }
