--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -2,10 +2,12 @@ plugins {
     id 'java-library'
 }
 
+base {
+    archivesName = "$mod_id-$project.name"
+}
+
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(21)
-    withSourcesJar()
-    withJavadocJar()
+    toolchain.languageVersion = JavaLanguageVersion.of(java_version)
 }
 
 repositories {
@@ -22,12 +24,30 @@ dependencies {
     implementation 'org.jetbrains:annotations:24.1.0'
 }
 
-tasks.named('javadoc', Javadoc) {
-    options.addStringOption('Xdoclint:none', '-quiet')
+['apiElements', 'runtimeElements'].each { variant ->
+    configurations."$variant".outgoing {
+        capability("$group:${base.archivesName.get()}:$version")
+        capability("$group:$mod_id-${project.name}-${minecraft_version}:$version")
+        capability("$group:$mod_id:$version")
+    }
 }
 
-tasks.withType(GenerateModuleMetadata).configureEach {
-    enabled = project.name == 'neoforge'
+jar {
+    from(rootProject.file("LICENSE")) {
+        rename { "${it}_${mod_name}" }
+    }
+
+    manifest {
+        attributes([
+                'Specification-Title'   : mod_name,
+                'Specification-Vendor'  : mod_author,
+                'Specification-Version' : project.jar.archiveVersion,
+                'Implementation-Title'  : project.name,
+                'Implementation-Version': project.jar.archiveVersion,
+                'Implementation-Vendor' : mod_author,
+                'Built-On-Minecraft'    : minecraft_version
+        ])
+    }
 }
 
 processResources {
@@ -35,6 +55,7 @@ processResources {
             // Project related Keys
             "version": version,
             "group": project.group,
+            "java_version": java_version,
 
             // Mod related Keys
             "minecraft_version": minecraft_version,
@@ -58,7 +79,6 @@ processResources {
 
             // NeoForge Keys
             "neoforge_version": neoforge_version,
-            "neoforge_loader_version_range": neoforge_loader_version_range,
 
             // Dependencies
             "resource_config_api": resource_config_api,
