--- a/buildSrc/src/main/groovy/ml-loader.gradle
+++ b/buildSrc/src/main/groovy/ml-loader.gradle
@@ -3,26 +3,32 @@ plugins {
     id 'ml-loader-publish'
 }
 
-dependencies {
-    compileOnly(project(':common'))
+configurations {
+    commonJava {
+        canBeResolved = true
+    }
+    commonResources {
+        canBeResolved = true
+    }
 }
+
+dependencies {
+    compileOnly(project(':common')) {
+        capabilities { requireCapability "$group:$mod_id" }
+    }
+
+    commonJava project(path: ':common', configuration: 'commonJava')
+    commonResources project(path: ':common', configuration: 'commonResources')
+}
+
+sourceSets.main.resources { srcDir 'src/generated' }
 
 tasks.named('compileJava', JavaCompile) {
-    it.options.encoding = 'UTF-8'
-    it.options.getRelease().set(21)
-    source(project(':common').sourceSets.main.allSource)
-}
-
-tasks.named('javadoc', Javadoc) {
-    source(project(":common").sourceSets.main.allJava)
-}
-
-tasks.named('sourcesJar', Jar) {
-    from project(':common').sourceSets.main.resources
-    from file('src/generated')
+    dependsOn(configurations.commonJava)
+    source(configurations.commonJava)
 }
 
 processResources {
-    from project(":common").sourceSets.main.resources
-    from file("src/generated")
+    dependsOn(configurations.commonResources)
+    from(configurations.commonResources)
 }
