--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,12 +1,18 @@
 plugins {
     id 'ml-common'
-    id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT'
+    id 'net.neoforged.moddev'
 }
 
-minecraft {
-    version(minecraft_version)
-    var aw = file("src/main/resources/${mod_id}.accesswidener")
-    if(aw.exists()) accessWideners(aw)
+neoForge {
+    neoFormVersion = neoform_version
+
+    def at = file('src/main/resources/META-INF/accesstransformer.cfg')
+    if (at.exists()) accessTransformers = [at.absolutePath]
+
+    parchment {
+        minecraftVersion = minecraft_version
+        mappingsVersion = parchment_version
+    }
 }
 
 dependencies {
@@ -14,4 +20,20 @@ dependencies {
 
     implementation "net.xstopho.resourceconfigapi:resourceconfigapi-common:${resource_config_api}"
     implementation "net.xstopho.resourcelibrary:resourcelibrary-common:${resource_library}"
+}
+
+configurations {
+    commonJava {
+        canBeResolved = false
+        canBeConsumed = true
+    }
+    commonResources {
+        canBeResolved = false
+        canBeConsumed = true
+    }
+}
+
+artifacts {
+    commonJava sourceSets.main.java.sourceDirectories.singleFile
+    commonResources sourceSets.main.resources.sourceDirectories.singleFile
 }
