--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.daemon=false
 # Project
 version=2.0.1
 group=net.xstopho.resource_cracker
+java_version=21
 modrinth_id=hwfBSwLz
 curseforge_id=917988
 
@@ -17,6 +18,10 @@ mod_credits=
 mod_description=Gather Resources with ease
 minecraft_version_range=[1.21, 1.21.1)
 
+# Vanilla
+neoform_version=1.21-20240613.152323
+parchment_version=2024.06.23
+
 # Fabric
 fabric_loader_version=0.15.11
 fabric_api_version=0.100.7
@@ -24,7 +29,6 @@ fabric_api_version=0.100.7
 # NeoForge
 neoforge_version=21.0.116-beta
 neoforge_loader_version_range=[2,)
-neogradle.subsystems.conventions.runs.create-default-run-per-type=false
 
 # Forge
 forge_version=51.0.26
@@ -35,7 +39,7 @@ resource_config_api=1.21-2.1.0
 resource_library=1.21-2.0.2
 
 # Runtime Mods
-emi_version=1.1.7+1.21
+emi_version=1.1.10+1.21
 mod_menu_version=11.0.0-rc.4
 jade_version=15.0.4
 ae2_version=19.0.2-alpha
