--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,18 +1,10 @@
 plugins {
     id 'ml-loader'
-    id 'net.neoforged.gradle.userdev' version '7.0.142'
+    id 'net.neoforged.moddev'
+    id 'me.modmuss50.mod-publish-plugin'
 }
-
-base {
-    archivesName = "${mod_id}-neoforge-${minecraft_version}"
-}
-
-var at = file('src/main/resources/META-INF/accesstransformer.cfg')
-if (at.exists()) minecraft.accessTransformers.file at
 
 dependencies {
-    implementation "net.neoforged:neoforge:${neoforge_version}"
-
     implementation "net.xstopho.resourceconfigapi:resourceconfigapi-neoforge:${resource_config_api}"
     implementation "net.xstopho.resourcelibrary:resourcelibrary-neoforge:${resource_library}"
 
@@ -22,15 +14,30 @@ dependencies {
     runtimeOnly "maven.modrinth:mekanism:${mekanism_version}-neoforge"
 }
 
-runs {
-    configureEach {
-        modSource project.sourceSets.main
+neoForge {
+    version = neoforge_version
+
+    parchment {
+        minecraftVersion = minecraft_version
+        mappingsVersion = parchment_version
     }
-    client {
-        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
+
+    runs {
+        configureEach {
+            systemProperty('neoforge.enableGameTestNamespaces', mod_id)
+            ideName = "NeoForge ${it.name.capitalize()} (${project.path})"
+            gameDirectory = project.file("runs/${it.name.toLowerCase()}")
+        }
+        client {
+            client()
+        }
+        data {
+            data()
+            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
+        }
     }
-    data {
-        programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated').getAbsolutePath(), '--existing', project(':common').file('src/main/resources/').getAbsolutePath()
+    mods {
+        "${mod_id}" { sourceSet sourceSets.main }
     }
 }
 
