common: fixing visual durability bug by syncing the config values between server and client

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=2.0.1
+version=2.1.0
 group=net.xstopho.resource_cracker
 java_version=21
 modrinth_id=hwfBSwLz
@@ -40,7 +40,7 @@ resource_library=1.21-2.0.2
 
 # Runtime Mods
 emi_version=1.1.10+1.21
-mod_menu_version=11.0.0-rc.4
-jade_version=15.0.4
-ae2_version=19.0.2-alpha
-mekanism_version=10.6.0.44
+mod_menu_version=11.0.1
+jade_version=15.1.4
+ae2_version=19.0.16-beta
+mekanism_version=10.6.6.53
