--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -31,6 +31,10 @@ neoForge {
         client {
             client()
         }
+        server {
+            server()
+            programArguments.add('nogui')
+        }
         data {
             data()
             programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
