--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "${neoforge_loader_version_range}"
+loaderVersion = "[2,)"
 license = "${mod_license}"
 
 [[mods]]
@@ -9,6 +9,9 @@ license = "${mod_license}"
     authors = "${mod_author}"
     description = '''${mod_description}'''
     logoFile = "icon.png"
+
+[[mixins]]
+    config = "${mod_id}.mixins.json"
 
 [[dependencies.${mod_id}]]
     modId = "neoforge"
