--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -39,8 +39,14 @@ loom {
             programArgs('--username', 'Dev')
             runDir("runs/client")
         }
+        server {
+            server()
+            setConfigName("Fabric Server")
+            ideConfigGenerated(true)
+            runDir("runs/server")
+        }
         datagen {
-            inherit client
+            inherit server
             name "Fabric Datagen"
             vmArg "-Dfabric-api.datagen"
             vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated")}"
