--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,11 +1,8 @@
 plugins {
     id 'ml-loader'
+    id 'idea'
     id 'net.minecraftforge.gradle'
     id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
-}
-
-base {
-    archivesName = "${mod_id}-forge-${minecraft_version}"
 }
 
 dependencies {
@@ -19,7 +16,7 @@ dependencies {
 
 minecraft {
     mappings channel: 'official', version: minecraft_version
-
+    reobf = false
     copyIdeResources = true // Calls processResources when in dev
 
     var at = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -37,7 +34,18 @@ minecraft {
                 }
             }
         }
-
+        server {
+            workingDirectory project.file('runs/server')
+            ideaModule "${rootProject.name}.${project.name}.main"
+            taskName "Server"
+            args '--nogui'
+            mods {
+                modServerRun {
+                    source sourceSets.main
+                    source project(":common").sourceSets.main
+                }
+            }
+        }
         data {
             workingDirectory project.file('runs/client')
             ideaModule "${rootProject.name}.${project.name}.main"
@@ -50,6 +58,14 @@ minecraft {
                 }
             }
         }
+    }
+}
+
+jar {
+    manifest {
+        attributes([
+                'MixinConfigs': "${mod_id}.mixins.json"
+        ])
     }
 }
 
