neoforge: fixing gradle setup to use common resources in data gen

--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -37,7 +37,7 @@ neoForge {
         }
         data {
             data()
-            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
+            programArguments = ['--mod', project.mod_id, '--all', '--output', file('src/generated/').getAbsolutePath(), '--existing', file('../common/src/main/resources/').getAbsolutePath()]
         }
     }
     mods {
