--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,7 @@ resource_library=1.21-2.0.2
 
 # Runtime Mods
 emi_version=1.1.10+1.21
+jei_version=19.5.0.61
 mod_menu_version=11.0.1
 jade_version=15.1.4
 ae2_version=19.0.16-beta
