--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -18,7 +18,7 @@ neoForge {
     version = neoforge_version
 
     parchment {
-        minecraftVersion = minecraft_version
+        minecraftVersion = '1.21'
         mappingsVersion = parchment_version
     }
 
