--- a/gradle.properties
+++ b/gradle.properties
@@ -2,46 +2,46 @@ org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
 # Project
-version=2.1.1
+version=2.2.1
 group=net.xstopho.resource_cracker
 java_version=21
 modrinth_id=hwfBSwLz
 curseforge_id=917988
 
 # Common
-minecraft_version=1.21
+minecraft_version=1.21.1
 mod_name=Resource Cracker
 mod_author=xStopho
 mod_id=resource_cracker
 mod_license=MIT
 mod_credits=
 mod_description=Gather Resources with ease
-minecraft_version_range=[1.21, 1.21.1)
+minecraft_version_range=[1.21.1, 1.21.2)
 
 # Vanilla
 neoform_version=1.21-20240613.152323
-parchment_version=2024.06.23
+parchment_version=2024.07.28
 
 # Fabric
 fabric_loader_version=0.15.11
-fabric_api_version=0.100.7
+fabric_api_version=0.102.1
 
 # NeoForge
-neoforge_version=21.0.133-beta
+neoforge_version=21.1.8
 neoforge_loader_version_range=[2,)
 
 # Forge
-forge_version=51.0.26
-forge_version_range=[51, 52)
+forge_version=52.0.2
+forge_version_range=[52, 53)
 
 # Dependencies
-resource_config_api=1.21-2.1.1
-resource_library=1.21-2.0.2
+resource_config_api=1.21-2.1.2
+resource_library=1.21.1-2.0.2
 
 # Runtime Mods
-emi_version=1.1.10+1.21
-jei_version=19.5.0.61
+emi_version=1.1.12+1.21
+jei_version=19.8.4.113
 mod_menu_version=11.0.1
-jade_version=15.1.4
-ae2_version=19.0.16-beta
-mekanism_version=10.6.6.53
+jade_version=15.1.5
+ae2_version=19.0.20-beta
+mekanism_version=10.6.7.54
