--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ minecraft_version_range=[1.21.1, 1.21.2)
 
 # Vanilla
 neoform_version=1.21-20240613.152323
+parchment_mc_version=1.21
 parchment_version=2024.07.28
 
 # Fabric
@@ -28,7 +29,7 @@ fabric_api_version=0.102.1
 
 # NeoForge
 neoforge_version=21.1.8
-neoforge_loader_version_range=[2,)
+neoforge_loader_range=[2,)
 
 # Forge
 forge_version=52.0.2
