--- a/buildSrc/src/main/groovy/ml-common.gradle
+++ b/buildSrc/src/main/groovy/ml-common.gradle
@@ -13,8 +13,8 @@ java {
 repositories {
     mavenCentral()
     maven { url 'https://raw.githubusercontent.com/Stein-N/resources/main/maven' }
-    maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
     maven { url 'https://maven.terraformersmc.com/' }
+    maven { url 'https://maven.parchmentmc.org/' }
     maven { url 'https://api.modrinth.com/maven' }
     maven { url 'https://cursemaven.com'}
 }
@@ -23,12 +23,8 @@ dependencies {
     implementation 'org.jetbrains:annotations:24.1.0'
 }
 
-['apiElements', 'runtimeElements'].each { variant ->
-    configurations."$variant".outgoing {
-        capability("$group:${base.archivesName.get()}:$version")
-        capability("$group:$mod_id-${project.name}-${minecraft_version}:$version")
-        capability("$group:$mod_id:$version")
-    }
+tasks.named('javadoc', Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet')
 }
 
 jar {
@@ -72,16 +68,17 @@ processResources {
             "fabric_loader_version": fabric_loader_version,
             "fabric_api_version": fabric_api_version,
 
-            // Forge Keys
-            "forge_version": forge_version,
-            "forge_version_range": forge_version_range,
-
             // NeoForge Keys
             "neoforge_version": neoforge_version,
+            "neoforge_loader_range": neoforge_loader_range,
 
             // Dependencies
             "resource_config_api": resource_config_api,
-            "resource_library": resource_library
+            "resource_library": resource_library,
+
+            // Forge Keys
+            "forge_version": forge_version,
+            "forge_version_range": forge_version_range
     ]
 
     filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/neoforge.mods.toml', 'META-INF/mods.toml', '*.mixins.json']) {
