--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,11 +6,8 @@ plugins {
 neoForge {
     neoFormVersion = neoform_version
 
-    def at = file('src/main/resources/META-INF/accesstransformer.cfg')
-    if (at.exists()) accessTransformers = [at.absolutePath]
-
     parchment {
-        minecraftVersion = '1.21'
+        minecraftVersion = parchment_mc_version
         mappingsVersion = parchment_version
     }
 }
@@ -20,20 +17,4 @@ dependencies {
 
     implementation "net.xstopho.resourceconfigapi:resourceconfigapi-common:${resource_config_api}"
     implementation "net.xstopho.resourcelibrary:resourcelibrary-common:${resource_library}"
-}
-
-configurations {
-    commonJava {
-        canBeResolved = false
-        canBeConsumed = true
-    }
-    commonResources {
-        canBeResolved = false
-        canBeConsumed = true
-    }
-}
-
-artifacts {
-    commonJava sourceSets.main.java.sourceDirectories.singleFile
-    commonResources sourceSets.main.resources.sourceDirectories.singleFile
 }
