--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -9,8 +9,8 @@ dependencies {
     annotationProcessor("org.spongepowered:mixin:0.8.5-SNAPSHOT:processor")
     implementation('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
 
-    implementation("net.xstopho.resourceconfigapi:resourceconfigapi-forge:${resource_config_api}") { transitive = false }
-    implementation("net.xstopho.resourcelibrary:resourcelibrary-forge:${resource_library}") { transitive = false }
+    implementation("net.xstopho.resourceconfigapi:resourceconfigapi-forge:${resource_config_api}")
+    implementation("net.xstopho.resourcelibrary:resourcelibrary-forge:${resource_library}")
 
     runtimeOnly("maven.modrinth:jei:${jei_version}-forge")
     runtimeOnly("curse.maven:configured-457570:5441231")
@@ -22,8 +22,8 @@ mixin {
 
 minecraft {
     mappings channel: 'official', version: minecraft_version
+    copyIdeResources = true
     reobf = false
-    copyIdeResources = true // Calls processResources when in dev
 
     runs {
         client {
