--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -18,7 +18,7 @@ neoForge {
     version = neoforge_version
 
     parchment {
-        minecraftVersion = '1.21'
+        minecraftVersion = parchment_mc_version
         mappingsVersion = parchment_version
     }
 
